@@ -1,1 +1,2 @@
 # Cursovaya5sem
+VM --module-path "C:\Users\DELL\IdeaProjects\javafx-sdk-17.0.1\lib" --add-modules javafx.controls,javafx.fxml 
